Fix failing consistency check test